--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react-dom": "^17.0.9",
     "bulma": "^0.9.3",
     "classnames": "^2.3.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-js-loader": "^0.1.0",
@@ -35,6 +35,7 @@
     "mochawesome": "^6.2.1",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.1.0",
+    "sass": "^1.62.1",
     "stylelint": "^13.13.1"
   },
   "scripts": {
